--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,20 @@ a{
     padding-inline: 80px;
 }
 
+.dark{
+    --bg : #0f172a;
+    --textColor : #ddd;
+    --softBg : #1f273a;
+    --softTextColor : #a6a6a6;
+}
+
+.light{
+    --bg:white;
+    --textColor: black;
+    --softBg : #f0f0f0;
+    --softTextColor : #626262;
+}
+
 @media screen and (max-width: 1536px) {
     .wrapper{
         max-width: 1366px;
