--- a/src/components/featured/featured.module.css
+++ b/src/components/featured/featured.module.css
@@ -1,3 +1,44 @@
 .container{
-    
+    margin-top: 30px;
+}
+
+.title{
+    font-size: 30px;
+    font-weight: 300;
+}
+
+.post{
+    margin-top: 60px;
+    display: flex;
+    align-items: center;gap: 50px;
+}
+
+.image{
+    object-fit: cover;
+}
+
+.imgContainer{
+    flex: 1;
+    height: 500px;
+    position: relative;
+}
+.textContainer{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.postDescription{
+    font-size: 14px;
+    font-weight: 300;
+    color: var(--softTextColor);
+}
+
+.button{
+    padding: 14px 20px;
+    border: none;
+    border-radius: 5px;
+    width: max-content;
+
 }
