--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,3 +1,63 @@
 .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100px;
+}
+
+.social{
+    display: flex;
+    gap:  10px;
+    flex: 1;
+}
+
+.logo{
+    flex: 1;
+    text-align: center;
+    font-size: 26px;
+    font-weight: bold;
+}
+
+.links{
+    display: flex;
+    gap:  20px;
+    flex: 1;
+    align-items: center;
+    font-size: 14px;
+}
+
+@media screen and (max-width : 1280px) {
+    .logo{
+        font-size: 20px;
+    }
+    .links{
+        font-size: 10px;
+    }
+}
+
+@media screen and (max-width : 1024px) {
+    .social{
+        display: none;
+    }
+    .logo{
+        text-align: left;
+    }
     
+}
+
+@media screen and (max-width : 768px) {
+    .logo{
+        font-size: 14px;
+    }
+   
+}
+
+@media screen and (max-width : 640px) {
+    .link{
+        display: none;
+    }
+    .links{
+        justify-content: flex-end;
+    }
+   
 }
